fixed image alignment

--- a/chunk_includes/styles.css
+++ b/chunk_includes/styles.css
@@ -31,5 +31,7 @@
 	text-align: center;
 }
 
-
-
+.instr2t img{
+    margin: 50; 
+    margin-top: 50px;
+}
